--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-* text eol=lf
+*           text=auto     # auto
+*.txt       text eol=lf
+*.vcproj    text eol=crlf # windows line-endings
+*.sh        text eol=lf   # linux line-endings
+*.jpg       -text
