--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-*           text=auto     # auto
+*           text=auto
 *.txt       text eol=lf
-*.vcproj    text eol=crlf # windows line-endings
-*.sh        text eol=lf   # linux line-endings
+*.vcproj    text eol=crlf
+*.sh        text eol=lf
 *.jpg       -text
